--- a/backoffice/public/css/main.css
+++ b/backoffice/public/css/main.css
@@ -1,40 +1,116 @@
+body {
+  background-image: url(/laravel_smolten_2.png);
+  background-position: 0px 40px;
 
-/*==================================MENU HAUT==================================*/
 
+}
 
+/*==================================HEADER==================================*/
+
+/*==================================HEADER MENU HAUT==================================*/
+main > #breadcrumb {
+  background-color: transparent;
+  width: 100%;
+}
+header {
+  width: 100%;
+  position: fixed;
+  z-index: 2;
+}
 
 .fa-twitter-square {
   color: #00abec;
+  padding: 0 10px;
 }
 .fa-facebook-square {
   color: #3b5998;
-}
+  padding: 0 10px;
+  }
 .fa-linkedin-square {
   color: #0274b3;
+  padding: 0 10px;
+
 }
 
 .fa-home {
   color: white;
 }
+.dropdown-submenu {
+  position: relative;
+}
 
+.dropdown-submenu>.dropdown-menu {
+  top: 0;
+  left: 100%;
+  margin-top: -6px;
+  margin-left: -1px;
+  -webkit-border-radius: 0 6px 6px 6px;
+  -moz-border-radius: 0 6px 6px;
+  border-radius: 0 6px 6px 6px;
+}
 
-/*================================FOOTER======================================*/
+.dropdown-submenu:hover>.dropdown-menu {
+  display: block;
+}
+
+.dropdown-submenu>a:after {
+  display: block;
+  content: " ";
+  float: right;
+  width: 0;
+  height: 0;
+  border-color: transparent;
+  border-style: solid;
+  border-width: 5px 0 5px 5px;
+  border-left-color: #ccc;
+  margin-top: 5px;
+  margin-right: -10px;
+}
+
+.dropdown-submenu:hover>a:after {
+  border-left-color: #fff;
+}
+
+.dropdown-submenu.pull-left {
+  float: none;
+}
+
+.dropdown-submenu.pull-left>.dropdown-menu {
+  left: -100%;
+  margin-left: 10px;
+  -webkit-border-radius: 6px 0 6px 6px;
+  -moz-border-radius: 6px 0 6px 6px;
+  border-radius: 6px 0 6px 6px;
+}
+
+/*==================================MAIN==================================*/
+.bgTable {
+  background-color: rgba(249, 127, 40, 0.5);
+
+}
+.bgTable > tbody > tr {
+  word-break: break-all;
+}
+/*=======================FOOTER======================================*/
 
 footer {
   position: fixed;
-  bottom: 10px;
+  bottom: 0px;
   width: 100%;
   text-align: center;
 
 }
 
-footer p {
+footer div > p {
   font-size: 16px;
   color: white
 
 }
 
-footer > i {
-  font-size: 35px;
-  padding: 20px
+footer > div > ul > li {
+  display: inline-block;
+}
+footer > div > ul {
+  padding: 0px;
+
 }
